# qt5_architecture_example

./: .clang-format  CMakeLists.txt  Readme.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
AudioMixer/: CMakeLists.txt
AudioMixer/event_handler/: CMakeLists.txt
AudioMixer/event_handler/include/jatozy/event_handler/: EventHandler.h
AudioMixer/event_handler/src/: EventHandler.cpp
AudioMixer/hardware/: CMakeLists.txt
AudioMixer/hardware/include/jatozy/hardware/: RandomTimeFactory.h  RandomTimeHardware.h
AudioMixer/hardware/src/: RandomTimeFactory.cpp  RandomTimeHardware.cpp
AudioMixer/hardware_interface/: CMakeLists.txt
AudioMixer/hardware_interface/include/jatozy/hardware_interface/: Factory.h  Hardware.h
AudioMixer/hardware_interface/src/: Hardware.cpp
AudioMixer/main/: CMakeLists.txt  main.cpp
AudioMixer/model/: CMakeLists.txt
AudioMixer/model/include/jatozy/model/: Amp.h  AmpD10.h  AmpD10Model.h  UndoStackModel.h
AudioMixer/model/src/: Amp.cpp  AmpD10.cpp  AmpD10Model.cpp  UndoStackModel.cpp
AudioMixer/persistency_filesystem/: CMakeLists.txt
AudioMixer/persistency_filesystem/include/jatozy/persistency_filesystem/: Factory.h
AudioMixer/persistency_filesystem/src/: Factory.cpp  Storage.cpp  Storage.h
AudioMixer/persistency_interface/: CMakeLists.txt
AudioMixer/persistency_interface/include/jatozy/persistency_interface/: Factory.h  Storage.h
AudioMixer/qml/: AmpD10.qml  main.qml  qml.qrc
AudioMixer/store/: CMakeLists.txt
AudioMixer/store/include/jatozy/store/: State.h  Store.h
AudioMixer/store/include/jatozy/store/commands/: AddAmp.h  MuteAllAmps.h  SetGainAmp.h  ToggleMuteAmp.h  UnmuteAllAmps.h
AudioMixer/store/src/: State.cpp  Store.cpp
docs/: ProductArchitecture.drawio  TestingArchitecture.drawio
qml/: hw.qml
